# qnn

./: CUSTOM_KERNELS_ANALYSIS.md
examples/Genie/Genie/: CMakeLists.txt  GenieSymbols.default  Makefile  README
examples/Genie/Genie/make/: Android.mk  Application.mk  Makefile.linux-x86_64
examples/Genie/Genie/src/: AUTOREGRESSIVE_TEXT_GENERATION.md  Dialog.cpp  Dialog.hpp  DynamicLoading.cpp  Embedding.cpp  Embedding.hpp  Engine.cpp  Engine.hpp  Exception.hpp  GenieCommon.cpp  GenieDialog.cpp  GenieDialogEmbedding.cpp  GenieEmbedding.cpp  GenieEngine.cpp  GenieLog.cpp  GenieNode.cpp  GeniePipeline.cpp  GenieProfile.cpp  GenieSampler.cpp  GenieTokenizer.cpp  LogUtils.cpp  LogUtils.hpp  Logger.cpp  Logger.hpp  Macro.hpp  PlatformDetector.Default.cpp  Profile.cpp  Profile.hpp  Registry.cpp  Registry.hpp  Sampler.cpp  Sampler.hpp  Tokenizer.cpp  Tokenizer.hpp  version_config.hpp
examples/Genie/Genie/src/Util/: HandleGenerator.hpp  HandleManager.hpp
examples/Genie/Genie/src/pipeline/: Accumulator.cpp  Accumulator.hpp  ImageEncoder.cpp  ImageEncoder.hpp  Node.cpp  Node.hpp  Pipeline.cpp  Pipeline.hpp  TextEncoder.cpp  TextEncoder.hpp  TextGenerator.cpp  TextGenerator.hpp
examples/Genie/Genie/src/qualla/: context.cpp  dialog.cpp  encoder.cpp  engine.cpp  env.cpp  gpio-marker.cpp  sampler.cpp  tokenizer.cpp
examples/Genie/Genie/src/qualla/MmappedFile/src/: MmappedFile.cpp  MmappedReader.cpp
examples/Genie/Genie/src/qualla/dialogs/: basic.cpp  basic.hpp  eaglet.cpp  eaglet.hpp  kv-share.cpp  kv-share.hpp  lhd-dec.cpp  lhd-dec.hpp  multistream.cpp  multistream.hpp  spec-dec.cpp  spec-dec.hpp  ssd-q1.cpp  ssd-q1.hpp
examples/Genie/Genie/src/qualla/encoders/image-encoders/: imageEncoder.cpp  imageEncoder.hpp
examples/Genie/Genie/src/qualla/encoders/text-encoders/: LUT.cpp  LUT.hpp  basic.cpp  basic.hpp
examples/Genie/Genie/src/qualla/engine-state/: LoraConfig.cpp  engineState.cpp
examples/Genie/Genie/src/qualla/engines/: lib.cpp  qnn-cpu.cpp  qnn-cpu.hpp  qnn-gpu.cpp  qnn-gpu.hpp  qnn-htp.cpp  qnn-htp.hpp
examples/Genie/Genie/src/qualla/engines/qnn-api/: BackendExtensions.cpp  BackendExtensions.hpp  BufferUtils.cpp  BufferUtils.hpp  IBackend.hpp  QnnApi.cpp  QnnApi.hpp  QnnApiUtils.cpp  QnnApiUtils.hpp  QnnConfig.hpp  QnnTypeUtils.cpp  QnnTypeUtils.hpp  qnn-utils.cpp  qnn-utils.hpp
examples/Genie/Genie/src/qualla/engines/qnn-api/PAL/: Debug.hpp  DynamicLoading.hpp  PlatformDetector.hpp
examples/Genie/Genie/src/qualla/engines/qnn-api/buffer/: IOBuffer.cpp  IOTensor.cpp  IOTensor.hpp
examples/Genie/Genie/src/qualla/engines/qnn-api/buffer/Allocator/: ClientAllocator.cpp  DmaAllocator.cpp  RpcAllocator.cpp
examples/Genie/Genie/src/qualla/engines/qnn-api/buffer/Registration/: ClientRegs.cpp  DmaRegs.cpp  RpcRegs.cpp
examples/Genie/Genie/src/qualla/engines/qnn-api/config/: Config.hpp  ConfigList.hpp  ConfigPrintUtilities.hpp  ContextConfig.cpp  ContextConfig.hpp
examples/Genie/Genie/src/qualla/engines/qnn-cpu/: cpu-model.cpp  cpu-model.hpp  read-gguf.cpp  read-gguf.hpp
examples/Genie/Genie/src/qualla/engines/qnn-gpu/: gpu-model.cpp  gpu-model.hpp
examples/Genie/Genie/src/qualla/engines/qnn-htp/: attention-mask.cpp  attention-mask.hpp  nsp-base-model.cpp  nsp-base-model.hpp  nsp-graph.cpp  nsp-graph.hpp  nsp-image-model.cpp  nsp-image-model.hpp  nsp-model.cpp  nsp-model.hpp
examples/Genie/Genie/src/qualla/engines/qnn-htp/KVCache/: context-manager.cpp  context-manager.hpp  empty-manager.cpp  empty-manager.hpp  kvmanager.cpp  kvmanager.hpp  native-kv.cpp  native-kv.hpp  smart-mask.cpp  smart-mask.hpp
examples/Genie/Genie/src/qualla/engines/qnn-htp/nsp-utils/: nsp-params.cpp  nsp-params.hpp
examples/Genie/Genie/src/qualla/include/fmt/: format.h
examples/Genie/Genie/src/qualla/include/qualla/: DialogCallback.hpp  IOBuffer.hpp  LoraConfig.hpp  context.hpp  dialog.hpp  encoder.hpp  engine.hpp  engineState.hpp  env.hpp  qualla.hpp  sampler.hpp  tokenizer.hpp
examples/Genie/Genie/src/qualla/include/qualla/detail/: Log.hpp  buffer.hpp  cache-file.hpp  config.hpp  exports.h  gpio-marker.hpp  json.hpp  kpi.hpp  preproc.hpp  sampler-utils.hpp  sentence.hpp  state.hpp  tensor.hpp  threadpool.hpp  timer.hpp  trie.hpp  utils.hpp
examples/Genie/Genie/src/qualla/include/qualla/detail/buffer/: Estimator.hpp
examples/Genie/Genie/src/qualla/include/qualla/detail/buffer/Allocator/: ClientAllocator.hpp  DmaAllocator.hpp  IBufferAlloc.hpp  RpcAllocator.hpp
examples/Genie/Genie/src/qualla/include/qualla/detail/buffer/Registration/: ClientRegs.hpp  DmaRegs.hpp  IBufferRegs.hpp  RpcRegs.hpp
examples/Genie/Genie/src/qualla/tokenizers/: tokenizers-capi.h
examples/Genie/Genie/src/qualla/tokenizers/rust/: Cargo.toml
examples/Genie/Genie/src/qualla/tokenizers/rust/.cargo/: config.toml
examples/Genie/Genie/src/qualla/tokenizers/rust/src/: lib.rs
examples/Genie/Genie/src/qualla/utils/: kpis.cpp  threadpool.cpp  utils.cpp
examples/Genie/Genie/src/trace/include/: Trace.hpp  TraceLogger.hpp  Traceable.hpp
examples/Genie/Genie/src/trace/src/: Trace.cpp  TraceLogger.cpp
examples/Genie/Model/: model.cpp
examples/Genie/configs/: sampler.json  standalone-engine.json
examples/Genie/genie-t2e-run/: CMakeLists.txt  Makefile  main.cpp
examples/Genie/genie-t2t-run/: CMakeLists.txt  Makefile  main.cpp
examples/Genie/genie-t2t-run/make/: Android.mk  Application.mk  Makefile.linux-x86_64
examples/QAIRT/python/: README.md  basic_tutorial.py  e2e_tutorial_utils.py  input_list.txt  llm_on_device_inference.py  op_trace_profiling_tutorial.py  profiling_tutorial.py  (+2 more)
examples/QNN/SampleApp/SampleAppMultiGraph/: CMakeLists.txt
examples/QNN/SampleApp/SampleAppMultiGraph/make/: Android.mk  Makefile.ubuntu-aarch64-gcc9.4
examples/QNN/SampleApp/SampleAppMultiGraph/src/: CMakeLists.txt  QnnSampleApp.cpp  QnnSampleApp.hpp  SampleApp.hpp  main.cpp
examples/QNN/SampleApp/SampleAppMultiGraph/src/PAL/src/windows/: FileOp.cpp
examples/QNN/SampleApp/SampleAppMultiGraph/src/Utils/: IOTensor.hpp
include/Genie/: GenieCommon.h  GenieNode.h
include/QNN/: QnnCommon.h  QnnSdkBuildId.h
(+148 files in other folders)
