#=============================================================================
#
#  Copyright (c) Qualcomm Technologies, Inc. and/or its subsidiaries.
#  All rights reserved.
#  Confidential and Proprietary - Qualcomm Technologies, Inc.
#
#=============================================================================

cmake_minimum_required (VERSION 3.14)
project(SampleApp)
add_subdirectory(src)
